--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,7 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.03em;
     margin-top: 0px;
-    margin-bottom: px;
+    margin-bottom: 21px;
 
     text-transform: uppercase;
 }
